# pandabuffers

./: README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: testing.yml
pandabuffers/: proto_to_pandas.py
tests/: test_pandabuffers.py
