[tool.poetry]
name = "pandabuffers"
version = "0.1.0"
description = ""
authors = ["Kimberly Jones <mathjones42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
protobuf = "^4.21.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.6.0"
types-protobuf = "^3.19.22"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '.*_pb2.py'
